@@ -40,6 +40,7 @@ xine-lib (1.1.0)
 xine-lib (1.0.3)
   * tiny doc update
   * build fixes and cross build improvements
+  * fixed an align problem in Win32 DirectX video output plugin
               
 xine-lib (1.0.2)
   * fixed playback of single-session Real RTSP streams, such as
